src/FinancialForce Accounting/objects/ChartOfAccountsStructure__c.object
<CustomObject>
    <customHelpPage>helpchartofaccountsstructure</customHelpPage>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultCorporateGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Corporate GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Chart of Accounts Structure (Default Corporate GLA)</relationshipLabel>
        <relationshipName>ChartOfAccountsStructureCorporate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DefaultLocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA.</errorMessage>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__r.IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>codaGeneralLedgerAccount__c.ChartOfAccountsStructure__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Chart of Accounts Structure (Default Local GLA)</relationshipLabel>
        <relationshipName>ChartOfAccountsStructureLocal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsCorporate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Corporate</label>
        <type>Checkbox</type>
    </fields>
    <label>Chart of Accounts Structure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>IsCorporate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chart of Accounts Structures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>